--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,12 @@
+#scoreboard{
+    position:absolute;
+    z-index:500;
+    top:0;
+    right:15px;
+    background-color:black;
+    color:white;
+}
+
 #player_name{
     text-align:center;
 }
