--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,33 @@
+#score_list{
+    margin-top:5px;
+}
+
+#cooldown_row{
+    margin-top:25px;
+}
+
+.shadow{
+    -moz-box-shadow: 0px 5px 15px 0px #343434;
+    -webkit-box-shadow: 0px 5px 15px 0px #343434;
+    -o-box-shadow: 0px 5px 15px 0px #343434;
+    box-shadow: 0px 5px 15px 0px #343434;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#343434, Direction=180, Strength=15);
+}
+
+.shadow-soft{
+    -moz-box-shadow: 0px 0px 10px 0px #343434;
+    -webkit-box-shadow: 0px 0px 10px 0px #343434;
+    -o-box-shadow: 0px 0px 10px 0px #343434;
+    box-shadow: 0px 0px 10px 0px #343434;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#343434, Direction=NaN, Strength=10);
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
 #scoreboard{
+    width:200px;
+    text-align:center;
     position:absolute;
     z-index:500;
     top:0;
