--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -64,6 +64,11 @@
     color:white;
 }
 
+.hover_accent:hover{
+    background-color:#979073 !important;
+    color:white;
+}
+
 .hover_white:hover{
     background-color:white !important;
 }
